CSS: changed padding on itinerary placeholder block as it was not working across all mobiles, fixed to ensure padding is adequate on mobile and tablet. JS: added and edited comments, ran JavaScript through JS Hint with result: no errors, formatted code. README: added content to the testing section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,18 +228,6 @@ input {
   margin-left: 10px;
 }
 
-@media screen and (max-width: 800px) {
-  #itinerary-block {
-    margin-left: -15px;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  #itinerary-block {
-    margin-left: 10px;
-  }
-}
-
 #actualItinerary {
   height: auto;
   max-height: 350px;
